# fnxc

./: .clang-format  .gitignore  .gitmodules  .luarc  CMakeLists.txt  Makefile  README.md  Shardfile  build.sh  compile_flags.txt  dos.txt  hello_world.nx  lexing_examples  vcpkg.json
cmake/: build.cmake  cc.cmake  dep.cmake  doc.cmake  test.cmake  utils.cmake
cmake/dep/: clang.cmake  doctest.cmake  libuv.cmake  llvm.cmake  lua.cmake  protobuf.cmake  sqlite.cmake  sqlitecpp.cmake  uvw.cmake
cmake/doc/: asciidoctor.cmake  doxygen.cmake
cmake/test/: root.cmake  utils.cmake
cmake/test/root/: clang.cmake  protobuf.cmake  sqlitecpp.cmake  uvw.cmake
core/: annotations.nx  class.nx  float.nx  int.nx  macros.nx  pointer.nx  proc.nx  slice.nx  tuple.nx  union.nx  vector.nx
design/: README.md  exceptions.md
design/website/: .eleventy.js  index.html
doc/: README.md  blocks.md  calls.md  classes.md  cli.adoc  comments.md  coroutines.md  defer.md  enums.md  exceptions.md  implementation.adoc  index.adoc  minix.md  modes.adoc  objects.md  platforms.adoc  procs.md  require.md  self.md
doc/asciidoctor/: implementation.adoc  mnx.adoc
doc/asciidoctor/implementation/: caching.adoc  interoperability.adoc  llir.adoc  nxir.adoc
doc/asciidoctor/shared/: cli.txt
doc/doxygen/: CMakeLists.txt  Doxyfile.in
doc/implementation/: aot.adoc  ast.adoc  caching.adoc  encoding.adoc  exceptions.adoc  interoperability.adoc  lexer.adoc
doc/old/: atomics.md  c.md  calls.md  compilation.md  generics.md  instructions.md  literals.md  macros.md  minix.md  optimization.md  pipeop.md  quick.md  variables.md
dump/: tokenizer.lua  tokenizer_old.lua
example/: async.nx  web.nx
example/cuda/: device.nx
example/cuda/host/: embed.nx  import.nx
include/: ansi.lua  common.cpp  describe.lua  hash.c  string.lua  table.lua  utf8.lua  utils.c
include/fnx/: errors.hpp  lexer.hpp  location.hpp  panic.hpp  position.hpp  radix.hpp  target.hpp  token.hpp  unit.hpp
include/fnx/app/: aot.hpp  dbg.hpp  doc.hpp  fmt.hpp  lsp.hpp  remote.hpp  repl.hpp
include/fnx/app/shared/: bc.hpp
include/fnx/c/: ast.hpp  cst.hpp  file.hpp  lexer.hpp  parser.hpp  token.hpp
include/fnx/cnx/: block.hpp  constexpr.hpp  cst.hpp  lexer.hpp  parser.hpp
include/fnx/hlir/: README.md  annotation.hpp  function.hpp  struct.hpp  type.hpp
include/fnx/llir/: assembler.hpp  codegen.hpp  linker.hpp  module.hpp  transpiler.hpp
include/fnx/lua/: block.hpp  cst.hpp  file.hpp  lexer.hpp  luauser.h  parser.hpp  token.hpp  universe.hpp
include/fnx/nxir/: codegen.hpp
include/fnx/onyx/: ast.hpp  ast_old.hpp  block.hpp  cache.hpp  compiler.hpp  cst.hpp  file.hpp  lexer.hpp  macro.hpp  parser.hpp  program.hpp  sst.hpp  token.hpp
include/fnx/utils/: bits.hpp  containers.hpp  coro.hpp  coroutines.hpp  flatten_variant.hpp  fnv1a.hpp  logging.hpp  null_stream.hpp  string.hpp  thread_pool.hpp  utf8.hpp  windows-coroutines.hpp
lib/: README.md
lib/doctest/: DoctestConfig.cmake  DoctestConfigVersion.cmake  README.md
lib/libuv/: LibUVConfig.cmake  LibUVConfigVersion.cmake
lib/lua/: LuaConfig.cmake  LuaConfigVersion.cmake  README.md
lib/protobuf/: GenerateProtos.cmake  ProtobufConfig.cmake  ProtobufConfigVersion.cmake  README.md
lib/sqlite/: SQLiteConfig.cmake  SQLiteConfigVersion.cmake
lib/sqlitecpp/: SQLiteCPPConfig.cmake  SQLiteCPPConfigVersion.cmake
lib/uvw/: UVWConfig.cmake  UVWConfigVersion.cmake
play/: foo.nx  main.nx
play/bar/: baz.nx  kox.nx
spec/: temp.lua
src/: README.md  array.c  ast_draft.cpp  cli.cpp  compiler.c  compiler.cpp  compiler.hpp  compiler.lua  lexer.cpp  lexer.h  lexer.hpp  lexer.lua  location.cpp  location.hpp  macro.cpp  macro.hpp  minix.c  minix.h  onyx.cpp  onyx.ebnf  parser.cpp  parser.hpp  reader.lua  sast.cpp  sast.hpp  shared.cpp  shared.hpp  token.cpp  token.hpp  tokenizer.h  tokenizer.lua
src/core/: float.nx  int.nx  slice.nx
src/cpp/: README.md  lexer.cpp  location.cpp  panic.cpp  position.cpp
src/cpp/app/: aot.cpp
src/cpp/app/shared/: bc.cpp
src/cpp/c/: lexer.cpp
src/cpp/cnx/: lexer.cpp
src/cpp/header/: compiler.hpp
src/cpp/header/app/: aot.hpp  api.hpp  fmt.hpp  jit.hpp  lsp.hpp  repl.hpp
src/cpp/header/compile/: ast.hpp  lexer.hpp  location.hpp  macro.hpp  optimizer.hpp  panic.hpp  parser.hpp  token.hpp  unit.hpp
src/cpp/header/compiler/: ast.hpp  lexer.hpp  (+7 more)
src/cpp/llir/: codegen.cpp
src/cpp/lua/: universe.cpp
src/cpp/onyx/: ast.cpp  lexer.cpp  parser.cpp  program.cpp  token.cpp
src/cpp/source/: cli.cpp  compiler.cpp
src/cpp/utils/: bits.cpp  containers.cpp  coro.cpp  coroutines.cpp  fnv1a.cpp  logging.cpp  null_stream.cpp  string.cpp  thread_pool.cpp  utf8.cpp
src/lua/: README.md  core.lua  fnxc.lua
src/lua/nx/: emit.lua  utils.lua
src/minix/: instructions.h  tables.c  tables.h  tokens.h  types.h
src/nx/: README.md  annotations.nx  array.nx  char.nx  charset.nx  codeunit.nx  encoding.nx  fixed.nx  float.nx  int.nx  macros.nx  numeric.nx  ratio.nx  real.nx  stack.nx  string.nx
src/nx/container/: enumerable.nx  indexable.nx
src/nx/core/: annotation.nx  coro.nx  fixed.nx  gen.nx  main.nx  module.nx  named_tuple.nx  namespace.nx  nvvm.nx  object.nx  pointer.nx  primitive.nx  slice.nx  struct.nx  tuple.nx  union.nx  unit.nx  vector.nx  x86.nx
src/nx/ext/: cuda.nx
src/nx/literal/: integer.nx  natural.nx  rational.nx
src/nx/std/: big.nx  class.nx  fiber.nx  file.nx  gen.nx  linked_list.nx  list.nx  math.nx  mutex.nx  proc.nx  promise.nx  ref.nx  scheduler.nx  singleton.nx  string.nx  text.nx  z_scheduler.nx
src/std/: array.nx  event.nx  promise.nx  scheduler.nx  signal.nx  slice.nx  struct.nx
src/uml/: database.plantuml
src/utils/: siphash.cpp  siphash.hpp
test/: README.md  test.cpp  tokenizer.lua
test/cpp/: clang.cpp  protobuf.cpp  sqlitecpp.cpp  temp.h  temp.hpp  uvw.cpp
test/cpp/utils/: bits.cpp  coro.cpp  coroutines.cpp  flatten_variant.cpp  fnv1a.cpp  thread_pool.cpp  utf8.cpp
test/nx/: README.md  array.nx  spec.nx
test/protobuf/proto/: foo.proto
test/utils/: bits.cpp  coroutines.cpp  fnv1a.cpp  siphash.cpp  utf8.cpp
(+52 files in other folders)
